Add explore projects

--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -372,5 +372,9 @@
   <img class="image" src="../../assets/pharmYarok/overview.png" />
 </div>
 
+<app-explore-projects
+  [firstProject]="'preset'"
+  [secondProject]="'threats'"
+></app-explore-projects>
 <app-footer></app-footer>
 <app-scroll-to-top></app-scroll-to-top>
