--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -307,5 +307,9 @@
   <img src="../../assets/threats/overview.png" />
 </div>
 
+<app-explore-projects
+  [firstProject]="'preset'"
+  [secondProject]="'pharm-yarok'"
+></app-explore-projects>
 <app-footer></app-footer>
 <app-scroll-to-top></app-scroll-to-top>
