--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,12 +14,10 @@
 
   <div class="projects">
     <span (click)="goto('threats')" class="project">
-      <img src="../../assets/threat.svg" />
-      <img src="../../assets/threat-hover.svg" />
+      <img class="threats" />
     </span>
     <span (click)="goto('pharm-yarok')" class="project">
-      <img src="../../assets/pharmYarok.svg" />
-      <img src="../../assets/pharmYarok-hover.svg" />
+      <img class="pharm-yarok" />
     </span>
   </div>
 
