--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -333,7 +333,14 @@
   <div class="problem-solutions">
     <div class="images">
       <div><img src="../../assets/pharmYarok/order1.svg" /></div>
-      <div><img src="../../assets/pharmYarok/order2.svg" /></div>
+      <div>
+        <div class="scroll-image">
+          <img class="frame" src="../../assets/pharmYarok/order-frame.png" />
+          <div class="content">
+            <img src="../../assets/pharmYarok/order2.svg" />
+          </div>
+        </div>
+      </div>
     </div>
     <div class="para">
       <span class="title">Order tracking</span>
