--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -224,7 +224,7 @@
     </div>
   </div>
 
-  <div class="section">
+  <div class="sections">
     <div class="paragraph-gap-2">
       <span class="title">The solution</span>
       <span class="text">
@@ -233,9 +233,7 @@
         and facilitating quick, effortless ordering.
       </span>
     </div>
-  </div>
 
-  <div class="wireframe">
     <div class="paragraph-gap-2">
       <div class="headers">
         <span class="sub-title">Wireframes</span>
@@ -243,11 +241,14 @@
       </div>
       <span class="text">
         To help users find the strains they're looking for easily, I categorized
-        the products according to the most common factors that <br />patients
-        consider when choosing a strain: dose, newness, brand, popularity, and
-        discounted price.
+        the products according to the most common factors that
+        <br />patients consider when choosing a strain: dose, newness, brand,
+        popularity, and discounted price.
       </span>
     </div>
+  </div>
+
+  <div class="wireframe">
     <div class="images">
       <div class="image">
         <img src="../../assets/pharmYarok/wireframe-old.svg" />
@@ -255,12 +256,10 @@
       </div>
       <img src="../../assets/icons/right-arrow.svg" />
       <div class="image">
-        <div>
-          <div class="scroll-image">
-            <img class="frame" src="../../assets/pharmYarok/wireframe.svg" />
-            <div class="content">
-              <img src="../../assets/pharmYarok/wireframe-new.svg" />
-            </div>
+        <div class="scroll-image">
+          <img class="frame" src="../../assets/pharmYarok/wireframe.svg" />
+          <div class="content">
+            <img src="../../assets/pharmYarok/wireframe-new.svg" />
           </div>
         </div>
         <span>New</span>
@@ -380,7 +379,7 @@
 </div>
 
 <app-explore-projects
-  [firstProject]="'preset'"
+  [firstProject]="'profiles'"
   [secondProject]="'threats'"
 ></app-explore-projects>
 <app-footer></app-footer>
