--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -57,108 +57,112 @@
     </div>
   </div>
 
-  <div class="research">
-    <div class="paragraph">
-      <span class="title">Research</span>
-      <span class="text">
-        To understand the navy's users needs, I visited a ship and conducted
-        interviews with each relevant position holder.<br />
-        My goals were to understand the surrounding environment of each position
-        holder and their JTBD so that I could <br />accommodate their different
-        needs while making good use of the their desk space.
-      </span>
-      <span class="questions">Some of the questions I asked were:</span>
-      <span class="paragraph-gap-3">
-        <span class="question"
-          >Which actions are taken in a threat situation?</span
-        >
-        <span class="question">Which data is crucial to have?</span>
-        <span class="question"
-          >What difficulties are there in the process?</span
-        >
-      </span>
-    </div>
-  </div>
-
-  <div class="personas-section">
-    <div class="paragraph-gap-2">
-      <span class="title">Personas</span>
-      <span>
-        Based on my research, I mapped 3 types of users, each one holds a
-        different role in the situation.
-      </span>
-    </div>
-    <div class="personas">
-      <div class="persona">
-        <div class="paragraph-gap-1">
-          <span class="header">
-            <span class="title">Defence Controller</span>
-            <img src="../../assets/threats/sergeant.svg" />
-          </span>
-          <span>
-            Responsible for alerting about potential <br />threats and
-            organizing the targets.
-          </span>
-        </div>
-        <span class="paragraph-gap-1">
-          <span class="chip-title-blue">needs</span>
-          <span class="content"
-            >Fast tools to perform quickly with a <br />focus on map
-            interaction.</span
+  <div class="section">
+    <div class="research">
+      <div class="paragraph">
+        <span class="title">Research</span>
+        <span class="text">
+          To understand the navy's users needs, I visited a ship and conducted
+          interviews with each relevant position holder.<br />
+          My goals were to understand the surrounding environment of each
+          position holder and their JTBD so that I could <br />accommodate their
+          different needs while making good use of the their desk space.
+        </span>
+        <span class="questions">Some of the questions I asked were:</span>
+        <span class="paragraph-gap-3">
+          <span class="question"
+            >Which actions are taken in a threat situation?</span
+          >
+          <span class="question">Which data is crucial to have?</span>
+          <span class="question"
+            >What difficulties are there in the process?</span
           >
         </span>
-        <span class="paragraph-gap-1">
-          <span class="chip-title-red">Pain Point</span>
-          The map area can be difficult to <br />navigate and use when it's
-          crowded.
+      </div>
+    </div>
+
+    <div class="personas-section">
+      <div class="paragraph-gap-2">
+        <span class="title">Personas</span>
+        <span>
+          Based on my research, I mapped 3 types of users, each one holds a
+          different role in the situation.
         </span>
       </div>
-      <div class="persona">
-        <div class="paragraph-gap-1">
-          <span class="header">
-            <span class="title">Defence Officer</span>
-            <img src="../../assets/threats/lieutenant.svg" />
+      <div class="personas">
+        <div class="persona">
+          <div class="paragraph-gap-1">
+            <span class="header">
+              <span class="title">Defence Controller</span>
+              <img src="../../assets/threats/sergeant.svg" />
+            </span>
+            <span>
+              Responsible for alerting about potential <br />threats and
+              organizing the targets.
+            </span>
+          </div>
+          <span class="paragraph-gap-1">
+            <span class="chip-title-blue">needs</span>
+            <span class="content"
+              >Fast tools to perform quickly with a <br />focus on map
+              interaction.</span
+            >
           </span>
-          <span class="content"> They manage the entire defence process. </span>
-        </div>
-        <span class="paragraph-gap-1">
-          <span class="chip-title-blue">needs</span>
-          <span>
-            <span class="text-bold">Fast scanning of data:</span><br />They need
-            a single source that <br />
-            concentrates all relevant information.
-          </span>
-        </span>
-        <span class="paragraph-gap-1">
-          <span class="chip-title-red">Pain Point</span>
-          <span>
-            <span class="text-bold">Inconvenient consumption of data:</span> the
-            <br />information is scattered in the map and <br />not concentrated
-            in 1 place.
-          </span>
-        </span>
-      </div>
-      <div class="persona">
-        <div class="paragraph-gap-1">
-          <span class="header">
-            <span class="title">Commanding Officer</span>
-            <img src="../../assets/threats/captain.svg" />
-          </span>
-          <span>
-            They supervise and control all events <br />and transfer needed
-            information.
+          <span class="paragraph-gap-1">
+            <span class="chip-title-red">Pain Point</span>
+            The map area can be difficult to <br />navigate and use when it's
+            crowded.
           </span>
         </div>
-        <span class="paragraph-gap-1">
-          <span class="chip-title-blue">needs</span>
-          <span class="content">
-            Similar to defence officers. <span class="content"></span>
+        <div class="persona">
+          <div class="paragraph-gap-1">
+            <span class="header">
+              <span class="title">Defence Officer</span>
+              <img src="../../assets/threats/lieutenant.svg" />
+            </span>
+            <span class="content">
+              They manage the entire defence process.
+            </span>
+          </div>
+          <span class="paragraph-gap-1">
+            <span class="chip-title-blue">needs</span>
+            <span>
+              <span class="text-bold">Fast scanning of data:</span><br />They
+              need a single source that <br />
+              concentrates all relevant information.
+            </span>
           </span>
-        </span>
-        <span class="paragraph-gap-1">
-          <span class="chip-title-red">Pain Point</span>
-          <span> Similar to defence officers. </span>
-        </span>
+          <span class="paragraph-gap-1">
+            <span class="chip-title-red">Pain Point</span>
+            <span>
+              <span class="text-bold">Inconvenient consumption of data:</span>
+              the <br />information is scattered in the map and <br />not
+              concentrated in 1 place.
+            </span>
+          </span>
+        </div>
+        <div class="persona">
+          <div class="paragraph-gap-1">
+            <span class="header">
+              <span class="title">Commanding Officer</span>
+              <img src="../../assets/threats/captain.svg" />
+            </span>
+            <span>
+              They supervise and control all events <br />and transfer needed
+              information.
+            </span>
+          </div>
+          <span class="paragraph-gap-1">
+            <span class="chip-title-blue">needs</span>
+            <span class="content">
+              Similar to defence officers. <span class="content"></span>
+            </span>
+          </span>
+          <span class="paragraph-gap-1">
+            <span class="chip-title-red">Pain Point</span>
+            <span> Similar to defence officers. </span>
+          </span>
+        </div>
       </div>
     </div>
   </div>
@@ -308,7 +312,7 @@
 </div>
 
 <app-explore-projects
-  [firstProject]="'preset'"
+  [firstProject]="'profiles'"
   [secondProject]="'pharm-yarok'"
 ></app-explore-projects>
 <app-footer></app-footer>
