--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -15,6 +15,7 @@
   --wireframe-background: #f9f9f9;
   --card-background: #ffffff;
   --gray-color: #8c8b8b;
+  --accent-background: #ebeafc;
 
   --dark-title-color: #e6e6e6;
   --dark-text-color: #cccccc;
